# xindawn-android-airplay-mirroring-sdk-for-multidevice-AndroidStudio

./: .gitignore  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/xindawn/: MainActivity.java
app/src/main/java/com/xindawn/airgl/: AirPlayerGLActivity.java
app/src/main/java/com/xindawn/center/: DMRCenter.java  DMRWorkThread.java  IDMRAction.java  MediaControlBrocastFactory.java  MediaControlBrocastReceiver.java  MediaRenderProxy.java
app/src/main/java/com/xindawn/datastore/: LocalConfigSharePreference.java
app/src/main/java/com/xindawn/image/: ImageActivity.java
app/src/main/java/javax/jmdns/: JmDNS.java  JmmDNS.java  NetworkTopologyDiscovery.java  ServiceListener.java
app/src/main/res/layout/: activity_main.xml  activity_main_mediacodec.xml  horizontal_layout.xml  mediacodec_player_layout.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: device_filter.xml
gradle/wrapper/: gradle-wrapper.properties
jniinterface/: build.gradle
jniinterface/src/main/: AndroidManifest.xml
jniinterface/src/main/cpp/: Application.mk  CMakeLists.txt
jniinterface/src/main/cpp/AirPlay/: Android.mk
jniinterface/src/main/cpp/Include/AirPlay/: AirPlayEx.h  AirPlayFactory.h  IAirPlayCallback.h
jniinterface/src/main/cpp/jniinterface/: Android.mk  CMakeLists.txt  H264MediaCodec.cpp  H264MediaCodec.h  Lock.cpp  Lock.h  XinDawnMultiScreen.cpp  XinDawnMultiScreen.h  addon.h  com_xindawn_jni_PlatinumJniProxy.cpp  sps_pps.cpp  sps_pps.h  threads.h  videosource.cpp  videosource.h
(+22 files in other folders)
